add bomb-view directive

--- a/browser/js/bomb/bomb-view.html
+++ b/browser/js/bomb/bomb-view.html
@@ -1,8 +1,4 @@
-<div id='bomb-view'>
-	<nav>
-	</nav>
-
-  
+<div>
     <div class="thumbnail col-xs-12 col-sm-12 col-md-12">
       <div class="col-xs-6 col-sm-6 col-md-6">
       
