--- a/browser/js/question/question.html
+++ b/browser/js/question/question.html
@@ -1,17 +1,17 @@
-<div id='bomb-view'>
+<div class="magictime slideRightRetourn transparent" id='bomb-view'>
 	<nav>
 	</nav>
 
   
-    <div class="thumbnail col-xs-12 col-sm-12 col-md-12">
-      <div class="col-xs-6 col-sm-6 col-md-6">
+    <div class="thumbnail col-xs-12 col-sm-12 col-md-12 transparent">
+      <div class="col-xs-6 col-sm-6 col-md-6 transparent">
       	
-        <h3>{{currentQuestion.text}}</h3>
-        <p>{{currentQuestion.answer}}</p>
-        <div class="shake">
+        <h3>{{currentBomb.question.text}}</h3>
+        <p>{{currentBomb.question.answer}}</p>
+        <div class="shake transparent">
         	<img src="http://vignette3.wikia.nocookie.net/cswikia/images/0/01/W_c4_css.png/revision/latest?cb=20151122041050"></img>
     	</div>
-        <div id="container">
+        <div id="container" class="transparent">
     <textarea id="write" ng-model="userform.answer" rows="1" cols="6"></textarea>
     <ul id="keyboard">
         <li class="symbol"><span class="off">`</span><span class="on">~</span></li>
