fix question html css transparent issue

--- a/browser/js/question/question.html
+++ b/browser/js/question/question.html
@@ -4,7 +4,7 @@
 
   
     <div class="thumbnail col-xs-12 col-sm-12 col-md-12 transparent">
-      <div class="col-xs-6 col-sm-6 col-md-6 transparent">
+      <div class="col-xs-6 col-sm-6 col-md-6">
       	
         <h3>{{currentBomb.question.text}}</h3>
         <p>{{currentBomb.question.answer}}</p>
