--- a/browser/js/play/play.html
+++ b/browser/js/play/play.html
@@ -1,2 +1,2 @@
-<div ng-class="currentBomb ? 'blurry' : 'css_class_iffalse'" id='playGame'></div>
+<div ng-class="currentBomb ? 'blurry' : 'not-blurry'" id='playGame'></div>
 <bomb-view ng-if="currentBomb" ></bomb-view>
