--- a/browser/js/question/question.html
+++ b/browser/js/question/question.html
@@ -22,9 +22,9 @@
             </tr>
           </thead>
           <tbody>
-            <tr class='table-success'>
-              <td><kbd>blah</kbd></td>
-              <td><kbd>blah 2</kbd></td>
+            <tr ng-repeat="testCase in trueArr" class='table-success'>
+              <td><kbd>{{testCase.true}}</kbd></td>
+              <td><kbd>{{testCase.false}}</kbd></td>
             </tr>
             <tr class='table-warning'>
               <td><kbd>whatevs</kbd></td>
@@ -98,7 +98,7 @@
 </div>
 <div class='col-xs-12 col-sm-2 col-md-2 transparent buttons'>
         <p>
-        	<a href="#" ng-click="submit(userform.answer, user, currentQuestion)" class="button button-3d-primary button-circle shake-horizontal control ">DIFFUSE</a>
+        	<a href="#" ng-click="diffuse(userform.answer, currentBomb.question)" class="button button-3d-primary button-circle shake-horizontal control ">DIFFUSE</a>
         	<a href="#" class="button button-3d-primary button-circle shake-vertical control">HINT</a>
         	<a href="#" class="button button-3d-primary button-circle shake-slow control flaticon-paper-plane">LEAVE</a>
         </p>
