--- a/browser/js/question/diffuseResult.html
+++ b/browser/js/question/diffuseResult.html
@@ -1,4 +1,4 @@
-<div class="jumbotron">
+<div class="jumbotron magictime twisterInDown">
 	<div ng-if="correct">
 		<h1>Correct!</h1>
 		 <p>You diffused the Bomb!</p>
@@ -8,7 +8,5 @@
 		<h1>Incorrect!</h1>
 		 <p>Kaboom!</p>
 	</div>
- 
- 
- <p><a ng-click="leave()" class="btn btn-primary btn-lg" href="#" role="button">Back to Game</a></p>
+
 </div>
