--- a/browser/js/question/diffuseResult.html
+++ b/browser/js/question/diffuseResult.html
@@ -1,4 +1,4 @@
-<div class="jumbotron">
+<div id="status" class="jumbotron magictime twisterInDown">
 	<div ng-if="correct">
 		<h1>Correct!</h1>
 		 <p>You diffused the Bomb!</p>
