correct and incorrect work properly on a superficial level

--- a/browser/js/question/diffuseResult.html
+++ b/browser/js/question/diffuseResult.html
@@ -1,10 +1,10 @@
-<div class="jumbotron magictime twisterInDown">
-	<div ng-if="correct">
+<div class="jumbotron magictime slideUpRetourn">
+	<div ng-if="correct===1">
 		<h1>Correct!</h1>
 		 <p>You diffused the Bomb!</p>
 	</div>
 
-	<div ng-if="!correct">
+	<div ng-if="correct===2">
 		<h1>Incorrect!</h1>
 		 <p>Kaboom!</p>
 	</div>
