--- a/browser/js/question/question.html
+++ b/browser/js/question/question.html
@@ -12,9 +12,15 @@
     	</div>
     </div>
     <div ng-if="!answered" class="thumbnail col-xs-12 col-sm-10 col-md-10 transparent questions">
-        <h2 class="text-center">{{currentBomb.question.text}}</h2>
+        <div class="panel panel-info">
+          <div class="panel-body">
+            <h3 class="text-center">{{currentBomb.question.text}}</h3>
+          </div>
+        </div>
+            
+        
         <h4 class="text-center">{{currentBomb.question.answer}}</h4>
-        <table class="table table-sm table-inverse">
+        <table ng-show="!currentBomb.question.forceAnswer"class="table table-sm table-inverse">
           <thead>
             <tr>
               <th><kbd>Match These</kbd></th>
