bomb animations added

--- a/browser/js/question/diffuseResult.html
+++ b/browser/js/question/diffuseResult.html
@@ -1,4 +1,4 @@
-<div>
+<div class="magictime spaceInUp">
     <div ng-if="correct===1"  class="alert alert-info">
 	  <strong>Correct!</strong> You successfully diffused the bomb!
 	</div>
