--- a/browser/js/question/question.html
+++ b/browser/js/question/question.html
@@ -7,7 +7,7 @@
 
         <div class="shake shake-constant transparent">
         <div ng-class="correct===1 ? 'magictime foolishOut' : 'not-blurry'" >
-        	<img ng-class src="http://blogradiocorredor.com.br/imagens/10175031032014bomba.png"></img>
+        	<img ng-class="correct===2 ? 'magictime holeOut' : 'not-blurry'" src="http://blogradiocorredor.com.br/imagens/10175031032014bomba.png"></img>
         </div>
     	</div>
     </div>
