The basis of our bomb timer on the bomb view.  Works some of the time.  Needs work

--- a/browser/js/question/diffuseResult.html
+++ b/browser/js/question/diffuseResult.html
@@ -5,5 +5,8 @@
     <div ng-if="correct===2"  class="alert alert-warning">
 	  <strong>Incorrect!</strong> The bomb is still active!
 	</div>
+	 <div ng-if="correct===3"  class="alert alert-warning">
+	  <strong>You're Too Late!</strong> Kaboom!
+	</div>
 
 </div>
