--- a/browser/js/question/question.html
+++ b/browser/js/question/question.html
@@ -5,12 +5,13 @@
 
         <div class="shake shake-constant transparent">
         <div ng-class="correct===1 ? 'magictime foolishOut' : 'not-blurry'" >
-        	<img ng-class="correct===2 ? 'magictime holeOut' : 'not-blurry'" src="http://blogradiocorredor.com.br/imagens/10175031032014bomba.png"></img>
+        	<img ng-class="correct===3 ? 'magictime holeOut' : 'not-blurry'" src="http://blogradiocorredor.com.br/imagens/10175031032014bomba.png"></img>
         </div>
     	</div>
     </div>
     <div ng-if="!answered" class="col-xs-12 col-sm-10 col-md-10 transparent questions">
         <div class="panel panel-info">
+           <div class='panel-heading text-center'>This bomb explodes in {{counter}} seconds</div> 
           <div class="panel-body">
             <h3 class="text-center">{{currentBomb.question.text}}</h3>
           </div>
