tweak homepage, tighten up logic for bomb collision, change bomb to s…  … …miley when solved

--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -1,4 +1,9 @@
 <section id="home">
-    <fullstack-logo></fullstack-logo>
-    <rando-greeting></rando-greeting>
+  <h1>RegEx Race</h1>
+  <h3>How Many Bombs Can You Diffuse?</h3>
+    <ul class='list-unstyled'>
+      <li ui-sref='play'>Play Game</li>
+      <li ui-sref='Login'>Login</li>
+      <li ui-sref='Signup'>Need an Account?</li>
+    </ul>
 </section>
