--- a/browser/js/question/question.html
+++ b/browser/js/question/question.html
@@ -34,7 +34,7 @@
         <div class='row'>
           <div ng-if='currentBomb.question.forceAnswer' class='input-margin'></div>
           <div class="transparent col-md-12 col-sm-12 input-container" >
-                <input autofocus="autofocus" ng-model="userform.answer" class="textbox " type="text"> 
+                <input ng-model="userform.answer" class="textbox " type="text" enter='diffuse(userform.answer, currentBomb.question, user.id)'> 
               <div ng-if="!answered" class='transparent buttons'>
               
               <div class='col-md-12 col-sm-12'>
