--- a/browser/js/login/login.html
+++ b/browser/js/login/login.html
@@ -5,12 +5,12 @@
     </alert>
 
     <div class="form-group">
-        <label for="email">Email address</label>
+        <label for="email">Email Address</label>
         <input type="text" ng-model="login.email" class="form-control" id="email" placeholder="Enter email">
     </div>
     <div class="form-group">
         <label for="login-password">Password</label>
         <input type="password" ng-model="login.password" class="form-control" id="login-password" placeholder="Password">
     </div>
-    <button type="submit" class="btn btn-default">Submit</button>
+    <input type="submit" value="Submit" class="button button-rounded button-flat-primary button-large">
 </form>
