--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -1,7 +1,7 @@
 <section id="home">
   <h1>RegEx Race</h1>
-  <h3 ng-if="user">Hey, {{user.user_name}}!</h3>
-  <h3>How Many Bombs Can You Diffuse?</h3>
+  <h4 ng-if="user">Hey, {{user.user_name}}!</h4>
+  <h4 id="tagline">How Many Bombs Can You Diffuse?</h4>
     <ul class='list-unstyled'>
       <li><button ui-sref='play' class="button button-rounded button-flat-primary button-large">Play Game</button></li>
       <li ng-if="!user"><button ui-sref='login' class="button button-rounded button-flat-action button-large">Login</button></li>
