--- a/browser/js/sign-up/sign-up.html
+++ b/browser/js/sign-up/sign-up.html
@@ -1,4 +1,4 @@
-<form id="sign-up-form" name="signForm" ng-submit="createAccount(signUp)">
+<form class="sign-up-form" name="signForm" ng-submit="createAccount(signUp)">
 
     <alert type="danger" ng-show="error">
         {{ error }}
