--- a/browser/js/score/save-score.html
+++ b/browser/js/score/save-score.html
@@ -1,7 +1,7 @@
 <div class="magictime swashIn transparent" id="save-score">
 	<div>
 		<h2>Your Score: {{score}}</h2>
-		<button ng-show='!scoreSubmitted' ng-click='saveToDatabase(score, user.id)'>Save Your Score</button> 
+		<button ng-show='!scoreSubmitted' ng-click='saveToDatabase(score, user.id)'>{{user? 'Save Score': 'Sign Up to Save Score' }}</button> 
 	</div>
 		<!-- <div>Enter Your User Name</div>
 		<input></input> -->
@@ -23,15 +23,6 @@
 			    <td><h4>{{ score.createdAt.slice(0, 10) }}<h4></td>
 			  </tr>
 			</table>
-
-
-
-<!-- 
-			<div ng-repeat="score in topScores">
-				<span>{{score.score}}</span>
-				<span>{{score.user.user_name}}</span>
-			</div> -->
-			
 		</div>
 	</div>
 
