--- a/browser/js/account/account.html
+++ b/browser/js/account/account.html
@@ -1,10 +1,64 @@
 <div id='account'>
 	<div class="row">
-	  <div class="col-xs-6 col-sm-8 col-md-8">
-	  	<h5>What's up, {{user.user_name}}?</h5>
+	  <div class="col-xs-12 col-sm-6 col-md-6">
+	  	<h5 id="account-title">What's up, {{user.user_name}}?</h5>
 	  </div>
-	  <div class="col-xs-6 col-sm-4 col-md-4">
-	  	<button class="button button-rounded button-flat-primary button-large">Update Account</button>
+	  <div class="col-xs-6 col-sm-3 col-md-3">
+	  	<button ui-sref='home' class="button button-rounded button-flat-primary button-large">Main Menu</button>
 	  </div>
+	  <div class="col-xs-6 col-sm-3 col-md-3">
+	  	<button class="button button-rounded button-flat-royal button-large">Update Account</button>
+	  </div>
+	</div>
+	<div class="row">
+		<div class="col-xs-12 col-sm-12 col-md-12">
+		  	<h5>How You're Doing</h5>
+		  </div>
+			<table class="table">
+				<tbody>
+			      <tr>
+			        <td class='col-xs-4 col-sm-4 col-md-4'><h6 class="stats">Highest Score</h6></td>
+			        <td class='col-xs-8 col-sm-8 col-md-8'>
+				        <div class="progress">
+						  <div class="progress-bar progress-bar-royal" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: {{userScore / topScore * 100}}%">
+						    {{userScore}}
+						  </div>
+					  	</div>
+					</td>
+			      </tr>
+			      <tr>
+			        <td class='col-xs-4 col-sm-4 col-md-4'><h6 class="stats">Best Bomb Diffusal Time</h6></td>
+			        <td class='col-xs-8 col-sm-8 col-md-8'>
+			        	<div class="progress">
+						  <div class="progress-bar progress-bar-royal" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
+						    
+						  </div>
+						</div>
+			        </td>
+			      </tr>
+			      <tr>
+			        <td class='col-xs-4 col-sm-4 col-md-4'><h6 class="stats">% Bombs Diffused</h6></td>
+			        <td class='col-xs-8 col-sm-8 col-md-8'>
+			        	<div class="progress">
+						  <div class="progress-bar progress-bar-royal" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+						    <span class="sr-only">60% Complete (warning)</span>
+						  </div>
+						</div>
+			        </td>
+
+			      </tr>
+			      <tr>
+			        <td class='col-xs-4 col-sm-4 col-md-4'><h6 class="stats">% Waves Won</h6></td>
+			        <td class='col-xs-8 col-sm-8 col-md-8'>
+			        	<div class="progress">
+						  <div class="progress-bar progress-bar-royal" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+						    <span class="sr-only">80% Complete (danger)</span>
+						  </div>
+						</div>
+			        </td>
+
+			      </tr>
+			    </tbody>
+			</table>
 	</div>
 </div>
