change text color to cyan

--- a/browser/js/score/save-score.html
+++ b/browser/js/score/save-score.html
@@ -25,7 +25,7 @@
 			</table>
 		</div>
 	</div>
-
+	<div> </div>
 	<button class="button button-rounded button-flat-primary button-large" ng-click='backToGame()'>Back to Game</button> 
 		
 </div>
