--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -3,7 +3,7 @@
   <h4 ng-if="user">Hey, {{user.user_name}}!</h4>
   <h4 id="tagline">How Many Bombs Can You Diffuse?</h4>
     <ul class='list-unstyled'>
-      <li><button ui-sref='play' class="button button-rounded button-flat-primary button-large">Play Game</button></li>
+      <li><button ui-sref='play' ng-click='playGame()' class="button button-rounded button-flat-primary button-large">Play Game</button></li>
       <li ng-if="!user"><button ui-sref='login' class="button button-rounded button-flat-action button-large">Login</button></li>
       <li ng-if="user"><button ui-sref='account' class="button button-rounded button-flat-action button-large">Account</button></li>
       <li ng-if="user"><button ng-click='logout()' class="button button-rounded button-flat-royal button-large">Logout</button></li>
