--- a/browser/js/score/save-score.html
+++ b/browser/js/score/save-score.html
@@ -26,6 +26,6 @@
 		</div>
 	</div>
 	<div> </div>
-	<button class="button button-rounded button-flat-primary button-large" ng-click='backToGame()'>Back to Game</button> 
+	<button class="button button-rounded button-flat-primary button-large" ng-click='backToHome()'>Go to Home</button> 
 		
 </div>
