--- a/browser/js/account/account.html
+++ b/browser/js/account/account.html
@@ -20,7 +20,7 @@
 			        <td class='col-xs-4 col-sm-4 col-md-4'><h6 class="stats">Highest Score</h6></td>
 			        <td class='col-xs-8 col-sm-8 col-md-8'>
 				        <div class="progress">
-						  <div class="progress-bar progress-bar-royal" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: {{userScore / topScore * 100}}%">
+						  <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: {{userScore / topScore * 100}}%">
 						    {{userScore}}
 						  </div>
 					  	</div>
@@ -30,7 +30,7 @@
 			        <td class='col-xs-4 col-sm-4 col-md-4'><h6 class="stats">Bombs Defused</h6></td>
 			        <td class='col-xs-8 col-sm-8 col-md-8'>
 			        	<div class="progress">
-						  <div class="progress-bar progress-bar-royal" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: {{diffused}}%">
+						  <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: {{diffused}}%">
 						  	{{userScore/100}}
 						  </div>
 						</div>
