Last bomb now displays correct message.  No more negative times.  Github link opens on new tab.

--- a/browser/js/question/diffuseResult.html
+++ b/browser/js/question/diffuseResult.html
@@ -1,6 +1,6 @@
 <div class="magictime spaceInUp">
     <div ng-if="correct===1"  class="alert alert-info">
-	  <strong>Correct!</strong> You successfully diffused the bomb!
+	  <strong>Correct!</strong> You successfully defused the bomb!
 	</div>
     <div ng-if="correct===2"  class="alert alert-warning">
 	  <strong>Incorrect!</strong> The bomb is still active!
