--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -1,7 +1,7 @@
 <section id="home">
   <h1>RegEx Race</h1>
   <h4 ng-if="user">Hey, {{user.user_name}}!</h4>
-  <h4 id="tagline">How Many Bombs Can You Diffuse?</h4>
+  <h4 id="tagline">How Many Bombs Can You Defuse?</h4>
     <ul class='list-unstyled'>
       <li><button ui-sref='play' ng-click='playGame()' class="button button-rounded button-flat-primary button-large">Play Game</button></li>
       <li ng-if="!user"><button ui-sref='login' class="button button-rounded button-flat-action button-large">Login</button></li>
@@ -20,7 +20,7 @@
 			</a>
 		</div>
 		<div class="col-xs-4 col-sm-4 col-md-4">
-	        <a href="https://github.com/nasser85/RegEx-Game" class="btn btn-social-icon btn-github">
+	        <a href="https://github.com/nasser85/RegEx-Game" target="_blank" class="btn btn-social-icon btn-github">
 			    <span class="fa fa-github"></span>
 			</a>
 		</div>
