--- a/browser/js/question/question.html
+++ b/browser/js/question/question.html
@@ -16,8 +16,17 @@
             <h3 class="text-center">{{currentBomb.question.text}}</h3>
           </div>
         </div>
+
         
-        <table ng-show="!currentBomb.question.forceAnswer"class="table table-sm table-inverse">
+        <div ng-if="currentBomb.question !== 'Generated'"  class="progress">
+          <div class="progress questionprogress">
+          <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+            <span class="sr-only">60% Complete</span>
+          </div>
+        </div>
+      </div>
+        
+        <table ng-show="!currentBomb.question.forceAnswer && currentBomb.question.type !== 'Generated'"class="table table-sm table-inverse">
           <thead>
             <tr>
               <th><kbd>Match These</kbd></th>
@@ -31,6 +40,7 @@
             </tr>
           </tbody>
         </table>
+
         <div class='row'>
           <div ng-if='currentBomb.question.forceAnswer' class='input-margin'></div>
           <div class="transparent col-md-12 col-sm-12 input-container" >
