--- a/browser/js/question/question.html
+++ b/browser/js/question/question.html
@@ -18,10 +18,9 @@
         </div>
 
         
-        <div ng-if="currentBomb.question !== 'Generated'"  class="progress">
+        <div ng-if="currentBomb.question.type === 'Generated'"  class="progress">
           <div class="progress questionprogress">
-          <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-            <span class="sr-only">60% Complete</span>
+          <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: ((currentBomb.question.index +1)/ currentBomb.question.subQuestions.length)*100 %;">
           </div>
         </div>
       </div>
