--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -7,23 +7,29 @@
       <li ng-if="!user"><button ui-sref='login' class="button button-rounded button-flat-action button-large">Login</button></li>
       <li ng-if="user"><button ui-sref='account' class="button button-rounded button-flat-action button-large">Account</button></li>
       <li ng-if="user"><button ng-click='logout()' class="button button-rounded button-flat-royal button-large">Logout</button></li>
-      <li ng-if="!user">Don't Have an Account? <button ui-sref='signup' class="button button-rounded button-flat-royal button-large">Sign Up</button></li>
       <li ng-if="!user">
-	 	<div class="col-xs-4 col-sm-4 col-md-4">
-	        <a href="/auth/google" class="btn btn-social-icon btn-google">
-			    <span class="fa fa-google"></span>
-			</a>
+      </li>
+	  </ul>
+	 	<div class = 'social-signup-container'>
+	 		<div class="">
+		        <a ui-sref='signup' class="btn btn-social btn-yahoo">
+				    <span class="fa fa-envelope-o"></span> Sign up with Email
+				</a>
+			</div>
+		 	<div class="">
+		        <a href="/auth/google" class="btn btn-social btn-google">
+				    <span class="fa fa-google"></span> Sign in with Google
+				</a>
+			</div>
+		   	<div class="">
+		        <a href="/auth/facebook" class="btn btn-social btn-facebook">
+				    <span class="fa fa-facebook"></span> Sign in with Facebook
+				</a>
+			</div>
+			<div class="">
+		        <a href="https://github.com/nasser85/RegEx-Game" target="_blank" class="btn btn-social btn-github">
+				    <span class="fa fa-github"></span> Check out Repo
+				</a>
+			</div>
 		</div>
-	   	<div class="col-xs-4 col-sm-4 col-md-4">
-	        <a href="/auth/facebook" class="btn btn-social-icon btn-facebook">
-			    <span class="fa fa-facebook"></span>
-			</a>
-		</div>
-		<div class="col-xs-4 col-sm-4 col-md-4">
-	        <a href="https://github.com/nasser85/RegEx-Game" target="_blank" class="btn btn-social-icon btn-github">
-			    <span class="fa fa-github"></span>
-			</a>
-		</div>
-	      </li>
-    </ul>
 </section>
