fix undefined user addAnswer error

--- a/browser/js/sign-up/game-end-sign-up.html
+++ b/browser/js/sign-up/game-end-sign-up.html
@@ -13,21 +13,16 @@
 
 	</form>
 
-	<div class = 'social-signup-container'>
-	 	<div class="">
+	<!-- <div ng-if="!user" class = 'social-signup-container'>
+	 	<div ng-if="!user">
 	        <a href="/auth/google" class="btn btn-social btn-google">
 			    <span class="fa fa-google"></span> Sign in with Google
 			</a>
 		</div>
-	   	<div class="">
+	   	<div ng-if="!user">
 	        <a href="/auth/facebook" class="btn btn-social btn-facebook">
 			    <span class="fa fa-facebook"></span> Sign in with Facebook
 			</a>
-		</div>
-		<div class="">
-	        <a href="https://github.com/nasser85/RegEx-Game" target="_blank" class="btn btn-social btn-github">
-			    <span class="fa fa-github"></span> Check out Repo
-			</a>
-		</div>
+		</div> -->
 	</div>
 </div>
