--- a/browser/js/play/game-canvas.html
+++ b/browser/js/play/game-canvas.html
@@ -1,3 +1,3 @@
 <div ng-class="currentBomb || saveScore ? 'blurry' : 'not-blurry'" id="playGame"></div>
-<bomb-view ng-if="currentBomb" ></bomb-view>
+<bomb-view ng-if="currentBombActive()" ></bomb-view>
 <save-score ng-show="saveScore" ></save-score>
