fixed basic account features

--- a/browser/js/account/account.html
+++ b/browser/js/account/account.html
@@ -75,7 +75,7 @@
 			      <tr>
 			        <td class='col-xs-4 col-sm-4 col-md-4'><h6 class="stats">Honors</h6></td>
 			        <td class='col-xs-8 col-sm-8 col-md-8'>
-			        	<div ng-if="first" (class="col-sm-2 col-md-2">
+			        	<div ng-if="first" class="col-sm-2 col-md-2">
 						    <div class="thumbnail transparent">
 						      <img src="badge4.png">
 						      <div class="caption center">
