--- a/browser/js/question/question.html
+++ b/browser/js/question/question.html
@@ -44,7 +44,7 @@
               <div ng-if="!answered" class='transparent buttons'>
               
               <div class='col-md-12 col-sm-12'>
-                <a href="#" ng-click="diffuse(userform.answer, currentBomb.question, user.id)" class="button button-3d-primary button-circle shake-horizontal control ">DIFFUSE</a>
+                <a href="#" ng-click="diffuse(userform.answer, currentBomb.question, user.id)" class="button button-3d-primary button-circle shake-horizontal control ">DEFUSE</a>
                 <a href="#" ng-click="leave()" class="button button-3d-primary button-circle shake-slow control flaticon-paper-plane">LEAVE</a>
               </div>
               </div>
