--- a/browser/js/account/account.html
+++ b/browser/js/account/account.html
@@ -124,8 +124,11 @@
 	</div>
 	<div class="row">
 		<h5>Submit Your Own RegEx Question</h5>
-		<div class="col-xs-12 col-sm-6 col-md-3">
-
+		<div class="col-xs-12 col-sm-6 col-md-6">
+			<button ui-sref='home' class="button button-rounded button-flat-primary button-large">Learn More</button>
+		</div>
+		<div class="col-xs-12 col-sm-6 col-md-6">
+			<button ui-sref='home' class="button button-rounded button-flat-primary button-large">Create a Question</button>
 		</div>
 	</div>
 </div>
