--- a/browser/js/account/account.html
+++ b/browser/js/account/account.html
@@ -123,12 +123,17 @@
 		
 	</div>
 	<div class="row">
-		<h5>Submit Your Own RegEx Question</h5>
-		<div class="col-xs-12 col-sm-6 col-md-6">
-			<button ui-sref='home' class="button button-rounded button-flat-primary button-large">Learn More</button>
-		</div>
-		<div class="col-xs-12 col-sm-6 col-md-6">
-			<button ui-sref='home' class="button button-rounded button-flat-primary button-large">Create a Question</button>
+			<div class="col-xs-12 col-sm-12 col-md-12">
+			   <div class="jumbotron">
+				  <h1 class="display-3">Become a Contributer!</h1>
+				  <p class="lead">Create and submit regular expression questions with ease.</p>
+				  <hr class="m-y-2">
+				  <p>If your question is approved, countless users will see it in their games!</p>
+				  <p class="lead">
+				    <a class="btn btn-primary btn-lg" href="#" role="button">Learn More</a>
+				    <a class="btn btn-primary btn-lg" ui-sref="create" role="button">Get Started</a>
+				  </p>
+			</div>
 		</div>
 	</div>
 </div>
