--- a/browser/js/create/create.html
+++ b/browser/js/create/create.html
@@ -17,17 +17,20 @@
 		</div>
 	</div>
 	<div ng-if="view==='create'"class="row">
-		       <div class="row">
-			    <form class="col s6 offset-s3 question-background">
-			      <div class="row">
-			        <div class="input-field col s12">
-			          <i class="material-icons prefix">mode_edit</i>
-			          <textarea id="icon_prefix2" class="materialize-textarea"></textarea>
-			          <label for="icon_prefix2">Enter Question</label>
-			        </div>
-			      </div>
-			    </form>
-			  </div>
+		<div class="jumbotron text-center">
+				  <h1 class="display-3">{{prompt}}</h1>
+				  <div class="input-group input-group-lg">
+				  <span class="input-group-addon" id="sizing-addon1">/</span>
+				  <input type="text" class="form-control" placeholder="{{placeHolder}}" aria-describedby="sizing-addon1">
+				  <span class="input-group-addon" id="sizing-addon1">/</span>
+				</div>
+				  <hr class="m-y-2">
+				  <p>{{clue}}</p>
+				  <p class="lead">
+				    <a class="btn btn-primary btn-lg" role="button" ng-click="proceed()" ><i class="fa fa-paper-plane-o" aria-hidden="true"></i> Continue</a>
+				  
+				  </p>
+			</div>
 		</div>
 		<!-- <form class="form-style-7">
 			<h2  class="text-center">Question Builder</h2>
