moved images to folder, updated urls

--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -11,7 +11,7 @@
       </li>
 
     </div>
-  <img id='regexLogo' src='regexlogo.png'>
+  <img id='regexLogo' src='./images/regexlogo.png'>
     <div id='authButtonGroup'>
   	 	<div class = 'social-signup-container'>
   	 		<div ng-if='!user'>
