--- a/browser/js/question/question.html
+++ b/browser/js/question/question.html
@@ -4,7 +4,7 @@
 
         <div class="shake shake-constant transparent">
         <div ng-class="correct===1 ? 'magictime foolishOut' : 'not-blurry'" >
-        	<img ng-class="correct===3 ? 'magictime holeOut' : 'not-blurry'" src="TheBomb.png"></img>
+        	<img ng-class="correct===3 ? 'magictime holeOut' : 'not-blurry'" src="./images/TheBomb.png"></img>
         </div>
     	</div>
     </div>
